--- a/ms-settings/printers.html
+++ b/ms-settings/printers.html
@@ -6,7 +6,7 @@
     <title>Redirect to Printer Settings</title>
     <script type="text/javascript">
         window.onload = function() {
-            window.open('ms-settings:printers', '_blank');
+            location.href = 'ms-settings:printers';
         }
     </script>
 </head>
