--- a/ms-settings/printers.html
+++ b/ms-settings/printers.html
@@ -7,6 +7,7 @@
     <script type="text/javascript">
         window.onload = function() {
             location.href = 'ms-settings:printers';
+            location.target = '_blank';
         }
     </script>
 </head>
