--- a/ms-settings/printers.html
+++ b/ms-settings/printers.html
@@ -3,20 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirect to Printer Settings</title>
+    <title>Open Printer Settings</title>
     <script type="text/javascript">
-        window.onload = function() {
-            var newWindow = window.open('ms-settings:printers', '_blank');
-            if (newWindow) {
-                newWindow.focus();
-                window.close();
-            } else {
-                document.getElementById('fallback').style.display = 'block';
-            }
+        function openPrinterSettings() {
+            window.open('ms-settings:printers', '_blank');
         }
     </script>
 </head>
 <body>
-    <p id="fallback" style="display:none;">If you are not redirected, <a href="ms-settings:printers" target="_blank">click here</a>.</p>
+    <button onclick="openPrinterSettings()">Open Printer Settings</button>
+    <p>If the button doesn't work, <a href="ms-settings:printers" target="_blank">click here</a>.</p>
 </body>
 </html>
