--- a/ms-settings/printers.html
+++ b/ms-settings/printers.html
@@ -6,9 +6,12 @@
     <title>Open Printer Settings</title>
     <script type="text/javascript">
         function openPrinterSettings() {
-            window.location.href = 'ms-settings:printers';
+            window.open('ms-settings:printers', '_blank');
         }
-        window.onload = openPrinterSettings;
+        window.onload = function() {
+            openPrinterSettings();
+            window.close();
+        };
     </script>
 </head>
 </html>
