--- a/ms-settings/printers.html
+++ b/ms-settings/printers.html
@@ -8,10 +8,7 @@
         function openPrinterSettings() {
             window.open('ms-settings:printers', '_blank');
         }
-        window.onload = function() {
-            openPrinterSettings();
-            window.close();
-        };
     </script>
 </head>
+<a href="javascript:openPrinterSettings()">Open Printer Settings</a>
 </html>
