--- a/ms-settings/printers.html
+++ b/ms-settings/printers.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Open Printer Settings</title>
+    <title>Ouvrir paramètres imprimantes & scanneurs</title>
     <script type="text/javascript">
         function openPrinterSettings() {
             window.open('ms-settings:printers', '_blank');
