--- a/ms-settings/printers.html
+++ b/ms-settings/printers.html
@@ -14,4 +14,7 @@
         };
     </script>
 </head>
+<body>
+    <button onclick="openPrinterSettings()">Ouvrir paramètres imprimantes & scanneurs</button>
+</body>
 </html>
