--- a/ms-settings/printers.html
+++ b/ms-settings/printers.html
@@ -6,7 +6,7 @@
     <title>Ouvrir paramètres imprimantes & scanneurs</title>
     <script type="text/javascript">
         function openPrinterSettings() {
-            window.open('ms-settings:printers');
+            window.open('ms-settings:printers', '_blank');
         }
         window.onload = function() {
             openPrinterSettings();
